# frigate-config-builder

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  pytest.ini  requirements-test.txt  requirements_test.txt  run_tests.sh
.github/workflows/: hacs.yml  tests.yml
custom_components/frigate_config_builder/: __init__.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  generator.py  manifest.json  models.py  output.py  sensor.py  services.yaml  strings.json
custom_components/frigate_config_builder/discovery/: __init__.py  amcrest.py  base.py  coordinator.py  generic.py  manual.py  reolink.py  unifiprotect.py
custom_components/frigate_config_builder/entities/: __init__.py  binary_sensor.py  button.py  sensor.py
custom_components/frigate_config_builder/translations/: en-MadroneM4ProMacMini (2).json  en.json
docs/: BUILD.md  PLAN.md  QUALITY.md
docs/reference/: frigate_reference.yml  generate_frigate_config.py
tests/: conftest.py  test_binary_sensor.py  test_button.py  test_config_flow.py  test_discovery_amcrest.py  test_discovery_reolink.py  test_discovery_unifiprotect.py  test_generator.py  test_options_flow.py  test_sensor.py  test_standalone.py
tests/validation/: test_schema.py  test_yaml.py
